[package]
name = "domain"
version = "0.1.0"
authors = ["Christian Poveda <git@pvdrz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
blake3 = { version = "0.3.7" }
hex = { version  = "*", features = ["serde"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = { version = "1.0.64" }
open = { version = "1.7.0" }
sled = { version = "0.34.6" }
zbus = { version = "1.9.1" }
log = { version = "0.4.14" }

[profile.release]
debug = true
