[package]
name = "domain"
version = "0.1.0"
authors = ["Christian Poveda <git@pvdrz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.40" }
bincode = { version = "1.3.3" }
blake3 = { version = "0.3.7" }
dirs = { version = "3.0.2" }
hex = { version  = "*", features = ["serde"] }
log = { version = "0.4.14" }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = { version = "1.0.64" }
structopt = { version = "0.3.21" }
open = { version = "1.7.0" }
sled = { version = "0.34.6" }
toml = { version = "0.5.8" }
zbus = { version = "1.9.1" }

[profile.release]
debug = true
